force-app/main/default/objects/Migration_Staging__c/Migration_Staging__c.object-meta.xml
<CustomObject>
    <description>INT-017 — canonical staging row for TAMS ETL. One row per source record, batch-loaded via Bulk API 2.0, then materialized into Contact / Subsidy_Application__c / Assessment__c.</description>
    <label>Migration Staging</label>
    <nameField>
        <displayFormat>MIG-{0000000}</displayFormat>
        <label>Staging Row</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Staging</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>