force-app/main/default/objects/Migration_Staging__c/fields/Load_Status__c.field-meta.xml
<CustomField>
    <fullName>Load_Status__c</fullName>
    <label>Load Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Loaded</fullName><default>false</default><label>Loaded</label></value>
            <value><fullName>NeedsReview</fullName><default>false</default><label>Needs Review</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>