force-app/main/default/objects/Migration_Staging__c/fields/Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Match_Score__c</fullName>
    <label>Match Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Dedup confidence 0-100. Below 95 routes to Data Steward review queue.</description>
</CustomField>