force-app/main/default/objects/Migration_Staging__c/fields/Origin_Office__c.field-meta.xml
<CustomField>
    <fullName>Origin_Office__c</fullName>
    <label>Origin Office</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>Guardrail: every migrated row carries source-office attribution.</description>
</CustomField>