force-app/main/default/objects/Migration_Staging__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <label>Source Record Id</label>
    <type>Text</type>
    <length>120</length>
    <required>true</required>
    <externalId>true</externalId>
</CustomField>