force-app/main/default/objects/Migration_Staging__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>TAMS instance identifier (e.g., TAMS-AMER-NYC-01).</description>
</CustomField>