force-app/main/default/objects/Migration_Staging__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <label>Target Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Contact</fullName><default>true</default><label>Contact</label></value>
            <value><fullName>Subsidy_Application__c</fullName><default>false</default><label>Subsidy Application</label></value>
            <value><fullName>Assessment__c</fullName><default>false</default><label>Assessment</label></value>
            <value><fullName>ContentDocument</fullName><default>false</default><label>Content Document</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>